[package]
name = "code-file-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
# IMPORTANT: Enable the "derive" feature to access Clap's derive macros.
clap = { version = "4.5.23", features = ["derive"] }
rfd = "0.15.2"
eframe = "0.30.0"
winit = "0.29.8"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
clipboard = "0.5.0"
