[package]
    edition = "2021"
    name    = "code-file-wrapper"
    version = "0.2.0"

[dependencies]
    # IMPORTANT: Enable the "derive" feature to access Clap's derive macros.
    clap = {version = "4.5.23", features = ["derive"]}
    clipboard-win = "5.4.0"
    eframe = "0.30.0"
    rfd = "0.15.2"
    windows = {version = "0.59.0", features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging"
    ]}
    winit = "0.30.8"
